--- a/WebForm/Pages/Shared/QuanLyChiTietDoan_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiTietDoan_Them.cshtml
@@ -4,7 +4,15 @@
     ViewData["Title"] = "Website Quản Lý Tour";
     Layout = "_Layout";
 }
-
+@using BUS;
+@using DTO;
+@using Microsoft.AspNetCore.Http;
+@using Newtonsoft.Json;   
+@{ 
+    string gia = HttpContext.Session.GetString("chitietdoan-giatour");
+    string iddoan = HttpContext.Session.GetString("chitietdoan");
+    List<KhachDTO> list = new KhachHangBUS().List();
+}
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
@@ -12,26 +20,36 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Chi Tiết Đoàn</h4>
-                        <form class="forms-sample">
-                            <div class="form-group">
-                                <label for="exampleInputName1">Mã Đoàn</label>
-                                <input type="text" class="form-control" placeholder="Mã Đoàn">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputName1">Mã Khách</label>
-                                <input type="text" class="form-control" placeholder="Mã Khách">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputName1">Họ tên</label>
-                                <input type="text" class="form-control" placeholder="Họ tên">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputName1">CMND</label>
-                                <input type="text" class="form-control" placeholder="CMND">
-                            </div>
-                            <button type="submit" class="btn btn-primary mr-2">Thêm</button>
-                            <button class="btn btn-light">Hủy</button>
-                        </form>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Mã khách hàng</th>
+                                        <th>Họ tên</th>
+                                        <th>CMND</th>
+                                        <th>Thao tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (KhachDTO item in list)
+                                        {
+                                            <tr>
+                                                <td>@item.Id_Khach</td>
+                                                <td>@item.Hoten_Khach</td>
+                                                <td>@item.Cmnd_Khach</td>
+                                                <td>
+                                                    <form method="post">
+                                                        <input type="hidden" asp-for="idkhach"  value="@item.Id_Khach" />
+                                                        <input type="submit" asp-page-handler="add" value="Thêm" class="btn btn-danger" />
+                                                    </form>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
