--- a/WebForm/Pages/Shared/QuanLyGia_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyGia_Sua.cshtml
@@ -2,9 +2,15 @@
 @model WebForm.Pages.Shared.QuanLyGia_SuaModel
 @{
     ViewData["Title"] = "Website Quản Lý Tour";
-    Layout = "QuanLyGia";
+    Layout = "_Layout";
 }
-
+@using Microsoft.AspNetCore.Http;
+@using Newtonsoft.Json;
+@using DTO;
+@{
+    var str = HttpContext.Session.GetString("editgia");
+    var obj = JsonConvert.DeserializeObject<GiaDTO>(str);
+}
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
@@ -12,26 +18,31 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Giá</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Giá</label>
-                                <input type="text" class="form-control" placeholder="Mã Giá">
+                                <input type="text" class="form-control" asp-for="gia.Id_Gia" value="@obj.Id_Gia" 
+                                       placeholder="Mã Giá" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Tour</label>
-                                <input type="text" class="form-control" placeholder="Mã Tour">
+                                <input type="text" class="form-control" asp-for="gia.Id_Tour" value="@obj.Id_Tour" 
+                                       placeholder="Mã Tour" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giá</label>
-                                <input type="text" class="form-control" placeholder="Giá">
+                                <input type="text" class="form-control" asp-for="gia.Gia" value="@obj.Gia"
+                                       placeholder="Giá">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thời gian bắt đầu</label>
-                                <input type="text" class="form-control" placeholder="Thời gian bắt đầu">
+                                <input type="text" class="form-control" asp-for="gia.Thoigianbatdau" value="@obj.Thoigianbatdau"
+                                       placeholder="Thời gian bắt đầu">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thời gian kết thúc</label>
-                                <input type="text" class="form-control" placeholder="Thời gian kết thúc">
+                                <input type="text" class="form-control" asp-for="gia.Thoigianketthuc" value="@obj.Thoigianketthuc"
+                                       placeholder="Thời gian kết thúc">
                             </div>
                             <button type="submit" class="btn btn-primary mr-2">Sửa</button>
                             <button class="btn btn-light">Hủy</button>
