--- a/WebForm/Pages/Shared/QuanLyGia_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyGia_Them.cshtml
@@ -2,9 +2,12 @@
 @model WebForm.Pages.Shared.QuanLyGia_ThemModel
 @{
     ViewData["Title"] = "Website Quản Lý Tour";
-    Layout = "QuanLyGia";
+    Layout = "_Layout";
 }
-
+@using BUS;
+@{
+    GiaBUS bus = new GiaBUS();
+}
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
@@ -12,28 +15,33 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Giá</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post"> 
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Giá</label>
-                                <input type="text" class="form-control" placeholder="Mã Giá">
+                                <input type="text" class="form-control" value="@bus.MakeID()" asp-for="gia.Id_Gia" 
+                                       placeholder="Mã Giá" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Tour</label>
-                                <input type="text" class="form-control" placeholder="Mã Tour">
+                                <select class="js-example-basic-single w-100" asp-for="gia.Id_Tour">
+                                    <option value="T01">T01</option>
+                                    <option value="T02">T02</option>
+                                    <option value="T03">T03</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giá</label>
-                                <input type="text" class="form-control" placeholder="Giá">
+                                <input type="text" class="form-control" asp-for="gia.Gia" placeholder="Giá">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thời gian bắt đầu</label>
-                                <input type="text" class="form-control" placeholder="Thời gian bắt đầu">
+                                <input type="text" class="form-control" asp-for="gia.Thoigianbatdau" placeholder="Thời gian bắt đầu">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thời gian kết thúc</label>
-                                <input type="text" class="form-control" placeholder="Thời gian kết thúc">
+                                <input type="text" class="form-control" asp-for="gia.Thoigianketthuc" placeholder="Thời gian kết thúc">
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Thêm</button>
+                            <input type="submit" value="Thêm" asp-page-handler="AddGia" class="btn btn-primary mr-2" />
                             <button class="btn btn-light">Hủy</button>
                         </form>
                     </div>
