--- a/WebForm/Pages/Shared/QuanLyChiTietTour_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiTietTour_Sua.cshtml
@@ -4,28 +4,32 @@
     ViewData["Title"] = "Website Quản Lý Tour";
     Layout = "_Layout";
 }
-
+@using Microsoft.AspNetCore.Http;
+@using Newtonsoft.Json;
+@using DTO;
+@{
+    var str = HttpContext.Session.GetString("editchitiettour");
+    var obj = JsonConvert.DeserializeObject<ChiTietTourDTO>(str);
+}
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Thêm Chi Tiết Tour</h4>
-                        <form class="forms-sample">
+                        <h4 class="card-title">Sửa Chi Tiết Tour</h4>
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
-                                <label for="exampleInputName1">Mã Tour</label>
-                                <input type="text" class="form-control" placeholder="Mã Tour">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputName1">Địa Điểm</label>
-                                <input type="text" class="form-control" placeholder="Địa Điểm">
+                                <label>Địa Điểm</label>
+                                <select asp-for="diadiem" asp-items="@(new SelectList(Model.listdiadiem,"Id_DiaDiem", "Ten_DiaDiem"))">
+                                </select>
+                                <input type="hidden" asp-for="tour.Id_DiaDiem" value="@obj.Id_DiaDiem">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thứ tự</label>
-                                <input type="text" class="form-control" placeholder="Thứ tự">
+                                <input type="number" asp-for="tour.Thutu" value="@obj.Thutu" class="form-control" placeholder="Thứ tự">
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Sửa</button>
+                            <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-primary mr-2">
                             <button class="btn btn-light">Hủy</button>
                         </form>
                     </div>
