--- a/WebForm/Pages/Shared/QuanLyChiTietTour_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiTietTour_Them.cshtml
@@ -12,26 +12,17 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Chi Tiết Tour</h4>
-                        <form class="forms-sample">
-                            <div class="form-group">
-                                <label for="exampleInputName1">Mã Tour</label>
-                                <input type="text" class="form-control" placeholder="Mã Tour">
-                            </div>
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label>Địa Điểm</label>
-                                <select class="js-example-basic-single w-100">
-                                    <option value="AL">Alabama</option>
-                                    <option value="WY">Wyoming</option>
-                                    <option value="AM">America</option>
-                                    <option value="CA">Canada</option> 
-                                    <option value="RU">Russia</option> 
+                                <select asp-for="tour.Id_DiaDiem" asp-items="@(new SelectList(Model.listdiadiem,"Id_DiaDiem", "Ten_DiaDiem"))">
                                 </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thứ tự</label>
-                                <input type="text" class="form-control" placeholder="Thứ tự">
+                                <input type="number" asp-for="tour.Thutu"  class="form-control" placeholder="Thứ tự">
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Thêm</button>
+                            <input type="submit" asp-page-handler="add" value="Thêm" class="btn btn-primary mr-2">
                             <button class="btn btn-light">Hủy</button>
                         </form>
                     </div>
