--- a/WebForm/Pages/Index.cshtml
+++ b/WebForm/Pages/Index.cshtml
@@ -7,6 +7,7 @@
 }
 @using BUS;
 @using DTO;
+@using Microsoft.AspNetCore.Http;
 @{
     List<TourDTO> list = new List<TourDTO>();
     List<LoaiTourDTO> listloai = new List<LoaiTourDTO>();
@@ -23,11 +24,27 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Danh sách Tour</h4>
-                        <form class="form-inline">
-                            <button type="button" class="btn btn-primary mb-2" onclick="btnclick()">
-                                Thêm
-                            </button>
+                        @{
+                            try
+                            {
+                                if (HttpContext.Session.GetString("xoatour") == "thanhcong")
+                                {
+                                    <h4 style="background-color: forestgreen">Xóa thành công</h4>
+                                    HttpContext.Session.Remove("xoatour");
+                                }
+                                else if (HttpContext.Session.GetString("xoatour") == "khongthanhcong")
+                                {
+                                    <h4 style="background-color: forestgreen">Không được xóa do vẫn còn trong tour</h4>
+                                    HttpContext.Session.Remove("xoatour");
+                                }
+
+                            }
+                            catch (Exception e) { }
+                        }
+                        <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyTour_Them">Thêm</a>
+                        <form class="form-inline" method="get">
                             <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Tour">
+                            <input type="button" class="btn btn-warning" value="Tìm" style="margin-left:" id="inlineFormInputName2">
                         </form>
                         <div class="table-responsive">
                             <table class="table table-striped">
@@ -51,8 +68,15 @@
                                                 <td>@item.Dacdiem_Tour</td>
                                                 <td>@tenloai</td>
                                                 <td>
-                                                    <button type="button" class="btn btn-warning">Sửa</button>
-                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                    <form method="post">
+                                                        <input type="hidden" asp-for="tour.Id_Tour" value="@item.Id_Tour" />
+                                                        <input type="hidden" asp-for="tour.Ten_Tour" value="@item.Ten_Tour" />
+                                                        <input type="hidden" asp-for="tour.Dacdiem_Tour" value="@item.Dacdiem_Tour" />
+                                                        <input type="hidden" asp-for="tour.Id_Loai" value="@item.Id_Loai" />
+                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                        <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-primary" />
+                                                    </form>
                                                 </td>
                                             </tr>
                                         }
