--- a/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
@@ -33,6 +33,14 @@
                             catch (Exception e) { }
                         }
                         <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyNhanVien_Them">Thêm</a>
+                        <form class="form-inline" method="get">
+                            <select class="form-control">
+                                <option value="Id_NV">Mã Nhân Viên</option>
+                                <option value="Hoten_NV">Họ tên</option>
+                            </select>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Tìm kiếm">
+                            <input type="button" class="btn btn-warning" value="Tìm" style="margin-left:">
+                        </form>
                         <div class="table-responsive">
                             <table class="table table-striped">
                                 <thead>
@@ -56,16 +64,16 @@
                                                 <td>@item.Sdt_NV</td>
                                                 <td>@item.Gioitinh_NV</td>
                                                 <form asp- method="post">
-                                                <td>
-                                                    <input type="hidden" asp-for="nhanvien.Id_NV" value="@item.Id_NV" />
-                                                    <input type="hidden" asp-for="nhanvien.Hoten_NV" value="@item.Hoten_NV" />
-                                                    <input type="hidden" asp-for="nhanvien.Email_NV" value="@item.Email_NV" />
-                                                    <input type="hidden" asp-for="nhanvien.Sdt_NV" value="@item.Sdt_NV" />
-                                                    <input type="hidden" asp-for="nhanvien.Gioitinh_NV" value="@item.Gioitinh_NV" />
-                                                    <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
-                                                    <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
-                                                    <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-danger" />
-                                                </td>
+                                                    <td>
+                                                        <input type="hidden" asp-for="nhanvien.Id_NV" value="@item.Id_NV" />
+                                                        <input type="hidden" asp-for="nhanvien.Hoten_NV" value="@item.Hoten_NV" />
+                                                        <input type="hidden" asp-for="nhanvien.Email_NV" value="@item.Email_NV" />
+                                                        <input type="hidden" asp-for="nhanvien.Sdt_NV" value="@item.Sdt_NV" />
+                                                        <input type="hidden" asp-for="nhanvien.Gioitinh_NV" value="@item.Gioitinh_NV" />
+                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                        <input type="submit" asp-page-handler="detail" value="Chi tiết" class="btn btn-danger" />
+                                                    </td>
                                                 </form>
                                             </tr>
                                         }
