--- a/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
@@ -32,8 +32,16 @@
                             }
                             catch (Exception e) { }
                         }
-                        <form class="form-inline">
-                            <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyKhachHang_Them">Thêm</a>
+                        <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyKhachHang_Them">Thêm</a>
+                        <form class="form-inline" method="get">
+                            <select class="form-control">
+                                <option value="Id_Khach">Mã Khách</option>
+                                <option value="Hoten_Khach">Họ tên</option>
+                                <option value="Cmnd_Khach">CMND</option>
+                                <option value="Sdt_Khach">Số điện thoại</option>
+                            </select>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Tìm kiếm">
+                            <input type="button" class="btn btn-warning" value="Tìm" style="margin-left:">
                         </form>
                         <div class="table-responsive">
                             <table class="table table-striped">
